--- a/docus/content/1.getting-tarted/1.index.md
+++ b/docus/content/1.getting-tarted/1.index.md
@@ -1,6 +1,8 @@
 ---
 title: Setup
-position: 1
+description: Add Nuxt-meilisearch into nuxt
+navigation: true
+toc: true
 ---
 
 Check the [Nuxt.js documentation](https://nuxtjs.org/api/configuration-modules#the-modules-property) for more information about installing and using modules in Nuxt.js.
@@ -9,22 +11,17 @@ Check the [Nuxt.js documentation](https://nuxtjs.org/api/configuration-modules#t
 
 Add `nuxt-meilisearch` dependency to your project:
 
-<code-group>
-  <code-block label="NPM" active>
-
-  ```bash
-  npm i --save-dev nuxt-meilisearch
+::code-group
+  ```bash [pnpm]
+  pnpm add -D nuxt-meilisearch
   ```
-
-  </code-block>
-  <code-block label="Yarn">
-
-  ```bash
+  ```bash [yarn]
   yarn add --dev nuxt-meilisearch
   ```
-
-  </code-block>
-</code-group>
+  ```bash [npm]
+  npm i --save-dev nuxt-meilisearch
+  ```
+::
 
 Edit your `nuxt.config.js` file to add twa module:
 
@@ -37,8 +34,9 @@ export default defineNuxtConfig({
     'nuxt-meilisearch'
   ],
   meilisearch: {
-    hostUrl: '<YOUR_MEILISEARCH_HOST_URL>', //required
-    apiKey: '<YOUR_MEILISEARCH_API_KEY>', //required
+    hostUrl:  'http://my-meilisearch-server.domain.com'
+    readApiKey: '<your_read_key>',
+    writeApiKey: '<your_write_key>',
     instantSearch: true, // default true
     serverSideUsage:  false// default false
     // optional
