--- a/docus/content/1.getting-tarted/2.customization.md
+++ b/docus/content/1.getting-tarted/2.customization.md
@@ -1,6 +1,7 @@
 ---
 title: Customization
-position: 2
+navigation: true
+toc: true
 ---
 
 ## FRONT-END
@@ -54,7 +55,12 @@ meilisearch: {
 ```
 
 
-## BACK-END ( optional )
+## BACK-END
+
+::alert{type="info"}
+It's fully **optional** 
+::
+
 
 ###  Meilisearch Server Client
 
