Add Docus layout

--- a/docus/content/0.index.md
+++ b/docus/content/0.index.md
@@ -8,7 +8,7 @@ layout: page
 ---
 cta:
   - Get Started
-  - /setup
+  - /getting-started/setup
 secondary:
   - Open on GitHub →
   - https://github.com/xlanex6/nuxt-meilisearch
@@ -24,6 +24,9 @@ Nuxt Meilisearch
 
 #description
 Easy way to install a blazing-fast search experience with [Meilisearch](https://www.meilisearch.com) into your [Nuxt](https://v3.nuxtjs.org) application
+
+#extra
+
 
 ::
 
