--- a/docus/content/1.getting-started/1.setup.md
+++ b/docus/content/1.getting-started/1.setup.md
@@ -1,8 +1,7 @@
 ---
 title: Setup
 description: Add Nuxt-meilisearch into nuxt
-navigation: true
-toc: true
+layout: default
 ---
 
 Check the [Nuxt.js documentation](https://nuxtjs.org/api/configuration-modules#the-modules-property) for more information about installing and using modules in Nuxt.js.
