Change to better naming convention (stick to Meilisearch)

--- a/docus/content/1.getting-started/1.setup.md
+++ b/docus/content/1.getting-started/1.setup.md
@@ -34,8 +34,8 @@ export default defineNuxtConfig({
   ],
   meilisearch: {
     hostUrl:  'http://my-meilisearch-server.domain.com'
-    readApiKey: '<your_read_key>',
-    writeApiKey: '<your_write_key>',
+    searchApiKey: '<your_search_key>',
+    adminApiKey: '<your_admin_key>',
     instantSearch: true, // default true
     serverSideUsage:  false// default false
     // optional
