--- a/docus/content/2.Setting/2.backend.md
+++ b/docus/content/2.Setting/2.backend.md
@@ -17,7 +17,7 @@ You need to provide API KEY with **WRITE ACCESS** .
 ```ts{}[nuxt.config.js]
 meilisearch: {
   ...
-  writeApiKey: '<your_secret_key>',
+  adminApiKey: '<your_secret_key>',
   serverSideUsage: true,
   ...
 }
