Fix lang mistakes

--- a/docus/content/3.Exemple/2.backend.md
+++ b/docus/content/3.Exemple/2.backend.md
@@ -1,5 +1,5 @@
 ---
-title: Back end exemple
+title: Back end example
 layout: default
 ---
 
@@ -24,7 +24,7 @@ You can interact with all Meilisearch [API REFERENCE](https://docs.meilisearch.c
 
 
 
-### Server full exemple
+### Server full example
 
 From your API server route, you can add a document to specific index.
 
