Fix doc highlight

--- a/docus/content/2.Setting/1.frontend.md
+++ b/docus/content/2.Setting/1.frontend.md
@@ -12,7 +12,7 @@ You can use [Algolia Vue 3 Instantsearch](https://github.com/algolia/vue-instant
 
 In your components, import Vue instantSearch like so 
 
-```vue
+```js{}
 import {
   AisInstantSearch,
   AisHits,
@@ -26,7 +26,7 @@ Theme valid options are `satellite`, `reset` or `algolia`.
 All `theme` info on [official page](https://www.algolia.com/doc/guides/building-search-ui/widgets/customize-an-existing-widget/vue/#style-your-widgets)
 
 
-```ts{}[nuxt.config.js]
+```ts{}[nuxt.config.ts]
 meilisearch: {
   ...
   instantSearch: {
@@ -42,7 +42,7 @@ You can customization Meilisearch client `clientOptions`.
 
 Full documentation [on Meiliserch client page](https://github.com/meilisearch/instant-meilisearch#-customization) for more details.
 
-```ts 
+```ts{}[nuxt.config.ts]
 meilisearch: {
   ...
   clientOptions: {
