--- a/docus/content/2.Setting/2.backend.md
+++ b/docus/content/2.Setting/2.backend.md
@@ -14,7 +14,7 @@ If you decide to manage documents, indexes or preferences into Nuxt server side,
 
 You need to provide API KEY with **WRITE ACCESS** .
 
-```ts{}[nuxt.config.js]
+```ts{}[nuxt.config.ts]
 meilisearch: {
   ...
   adminApiKey: '<your_secret_key>',
