--- a/docus/content/3.Exemple/1.frontend.md
+++ b/docus/content/3.Exemple/1.frontend.md
@@ -7,7 +7,7 @@ layout: default
 
 On your client side ( Front-end ), you can load Meilisearch client with composables.
 
-```vue
+```vue{}
 <script setup>
 import {
   AisInstantSearch,
@@ -21,7 +21,7 @@ const client = useMeilisearchClient()
 
 Then is your template
 
-```vue
+```vue{}
 <template>
     <ais-instant-search
       :search-client="client"
