Replaced clientOptions with options
clientOptions does not function, options works as expected

--- a/docus/content/2.Setting/1.frontend.md
+++ b/docus/content/2.Setting/1.frontend.md
@@ -45,7 +45,7 @@ Full documentation [on Meiliserch client page](https://github.com/meilisearch/in
 ```ts{}[nuxt.config.ts]
 meilisearch: {
   ...
-  clientOptions: {
+  options: {
         placeholderSearch: true,
         paginationTotalHits: 200,
         finitePagination: false,
