--- a/docus/content/2.Setting/1.frontend.md
+++ b/docus/content/2.Setting/1.frontend.md
@@ -6,7 +6,7 @@ layout: default
 
 ### Algolia component library
 
-You can use [Algolia Vue 3 Instantsearch](https://github.com/algolia/vue-instantsearch) components. 
+You can use [Algolia Instantsearch](https://github.com/algolia/instantsearch) components. 
 
 **ALL** Algolia components will be loaded and available in your app.  
 
