Update Doc on naming convention

--- a/docus/content/2.Setting/1.frontend.md
+++ b/docus/content/2.Setting/1.frontend.md
@@ -38,14 +38,14 @@ meilisearch: {
 
 ### **Advanced** Search client option
 
-You can customization Meilisearch client `clientOptions`.
+You can customization Meilisearch client `meilisearchConfig`.
 
 Full documentation [on Meiliserch client page](https://github.com/meilisearch/instant-meilisearch#-customization) for more details.
 
 ```ts{}[nuxt.config.ts]
 meilisearch: {
   ...
-  clientOptions: {
+  meilisearchConfig: {
         placeholderSearch: true,
         paginationTotalHits: 200,
         finitePagination: false,
