Doc for server side

--- a/docus/content/0.index.md
+++ b/docus/content/0.index.md
@@ -148,7 +148,7 @@ Easy way to install a blazing-fast search experience with [Meilisearch](https://
   ::
   ::card
   #title
-  Server ready
+  Server Side
   #description
   Server usage to manage documents and all preferences ( index, preferences.. )
   ::
