--- a/docus/content/1.getting-started/1.setup.md
+++ b/docus/content/1.getting-started/1.setup.md
@@ -22,7 +22,42 @@ Add `nuxt-meilisearch` dependency to your project:
   ```
 ::
 
-Edit your `nuxt.config.js` file to add twa module:
+Then ddit your `nuxt.config.js` to load the module:
+
+```ts{}[nuxt.config.js]
+export default defineNuxtConfig({
+  ...
+  modules: [
+    'nuxt-meilisearch'
+  ],
+  ...
+```
+
+
+
+## Basic Setup 
+:badge[Client Side only]
+
+The basic setup is to provide the host url and the search api key.
+
+```ts{}[nuxt.config.js]
+  ...
+  meilisearch: {
+    hostUrl:  'http://my-meilisearch-server.domain.com' //reqired
+    searchApiKey: '<your_search_key>' // reqired
+  }
+  ...
+})
+```
+
+
+## Advanced Setup 
+:badge[Client Side + Server Side]
+
+You can customization Meilisearch client `meilisearchConfig`.
+
+Full documentation [on Meiliserch client page](https://github.com/meilisearch/instant-meilisearch#-customization) for more details.
+
 
 ```ts{}[nuxt.config.js]
 import { defineNuxtConfig } from 'nuxt'
@@ -50,4 +85,3 @@ export default defineNuxtConfig({
   ...
 })
 ```
-
