Basic and Advanced  tempo Naming Convention

--- a/docus/content/2.Setting/1.frontend.md
+++ b/docus/content/2.Setting/1.frontend.md
@@ -5,10 +5,9 @@ layout: default
 
 # Meilisearch Front Side
 
-## Basic
+<!-- ## Basic
 
-## Advanced
-
+## Advanced -->
 
 ### Algolia InstantSearch
 
