--- a/docus/content/2.Setting/2.server.md
+++ b/docus/content/2.Setting/2.server.md
@@ -5,6 +5,16 @@ layout: default
 
 # Meilisearch Server Side
 
+::alert{type="danger"}
+🚨🚨 **Breaking CHANGE** 🚨🚨
+::
+
+From v0.4.0 and above, you access to Meilisearch instance with `$meilisearch` instead of `const { serverMeilisearchClient } = event.context`
+
+The aim is to optimize performance and avoid to create a new instance for each request if not used.
+
+---
+
 ### Configuration
 
 You can to manage documents, indexes or preferences from Nuxt server side.
