Performance Server Side (#55)
* Server side as $meilisearcho on Utils

* Doc for server side

* More control on Meilisearch Server Side

* Cleannig useles method

* Basic and Advanced  tempo
Naming Convention

* Doc update

--- a/docus/content/2.Setting/1.frontend.md
+++ b/docus/content/2.Setting/1.frontend.md
@@ -1,10 +1,15 @@
 ---
-title: Front end
+title: Front Side
 layout: default
 ---
 
+# Meilisearch Front Side
 
-### Algolia component library
+<!-- ## Basic
+
+## Advanced -->
+
+### Algolia InstantSearch
 
 You can use [Algolia Instantsearch](https://github.com/algolia/instantsearch) components. 
 
@@ -20,7 +25,7 @@ import {
 } from 'vue-instantsearch/vue3/es'
 ```
 
-### Design
+#### Design
 Theme valid options are `satellite`, `reset` or `algolia`.
 
 All `theme` info on [official page](https://www.algolia.com/doc/guides/building-search-ui/widgets/customize-an-existing-widget/vue/#style-your-widgets)
@@ -35,24 +40,3 @@ meilisearch: {
   ...
 }
 ```
-
-### **Advanced** Search client option
-
-You can customization Meilisearch client `meilisearchConfig`.
-
-Full documentation [on Meiliserch client page](https://github.com/meilisearch/instant-meilisearch#-customization) for more details.
-
-```ts{}[nuxt.config.ts]
-meilisearch: {
-  ...
-  meilisearchConfig: {
-        placeholderSearch: true,
-        paginationTotalHits: 200,
-        finitePagination: false,
-        primaryKey: undefined,
-        keepZeroFacets: true
-      }
-  ...
-}
-```
-
