--- a/docus/content/2.Usage/1.frontend.md
+++ b/docus/content/2.Usage/1.frontend.md
@@ -1,9 +1,47 @@
 ---
-title: Front end example
+title: Front Side
 layout: default
 ---
 
-### Search 
+# Meilisearch Front Side
+
+<!-- ## Basic
+
+## Advanced -->
+
+### Algolia InstantSearch
+
+You can use [Algolia Instantsearch](https://github.com/algolia/instantsearch) components. 
+
+**ALL** Algolia components will be loaded and available in your app.  
+
+In your components, import Vue instantSearch like so 
+
+```js{}
+import {
+  AisInstantSearch,
+  AisHits,
+  AisSearchBox,
+} from 'vue-instantsearch/vue3/es'
+```
+
+#### Design
+Theme valid options are `satellite`, `reset` or `algolia`.
+
+All `theme` info on [official page](https://www.algolia.com/doc/guides/building-search-ui/widgets/customize-an-existing-widget/vue/#style-your-widgets)
+
+
+```ts{}[nuxt.config.ts]
+meilisearch: {
+  ...
+  instantSearch: {
+        theme: 'algolia'
+      },
+  ...
+}
+```
+
+### Full Exemple 
 
 On your client side ( Front-end ), you can load Meilisearch client with composables.
 
@@ -14,7 +52,9 @@ import {
   AisHits,
   AisSearchBox,
 } from 'vue-instantsearch/vue3/es'
+
 const client = useMeilisearchClient()
+
 </script>
 
 ```
@@ -48,3 +88,4 @@ Then is your template
     </ais-instant-search>
 </template>
 ```
+
