--- a/docus/content/2.Usage/2.server.md
+++ b/docus/content/2.Usage/2.server.md
@@ -9,9 +9,12 @@ layout: default
 🚨🚨 **Breaking CHANGE** 🚨🚨
 ::
 
-From v0.4.0 and above, you access to Meilisearch instance with `$meilisearch` instead of `const { serverMeilisearchClient } = event.context`
+From v0.4.0 and above, you access to Meilisearch with `$meilisearch` instead of event.  
+🛑 ~~`const { serverMeilisearchClient } = event.context`~~
 
-The aim is to optimize performance and avoid to create a new instance for each request if not used.
+✅ `$meilisearch`
+
+The aim is to optimize performance and avoid to create a new instance for each request, no more `event.context` binding.
 
 ---
 
@@ -61,3 +64,24 @@ export default defineEventHandler(async (event) => {
 
 `$meilisearch` is full typed so you can enjoy the full power of typescript, autocomplete and intellisense.
 
+### Full example
+
+From your API server route, you can add a document to specific index.
+
+```ts{}[server/api/myRoute]
+export default defineEventHandler(async (event) => {
+
+  
+   const addRecordRes = await $meilisearch.index('movies').addDocuments(
+     {
+       id: 999999994234,
+       title: 'Batman Unmasked: The Psychology of the Dark Knight',
+       poster: 'https://image.tmdb.org/t/p/w1280/jjHu128XLARc2k4cJrblAvZe0HE.jpg',
+       overview: 'Delve into the world of Batman and the vigilante justice tha',
+       release_date: '2008-07-15'
+     }
+   )
+
+   return { myCustomResponse: "Document is on the way...." }
+}
+```
