--- a/docus/content/2.Usage/1.frontend.md
+++ b/docus/content/2.Usage/1.frontend.md
@@ -5,13 +5,56 @@ layout: default
 
 # Meilisearch Front Side
 
-<!-- ## Basic
+## Basic
 
-## Advanced -->
+You can use Meilisearch's power with all compossbles available in this package.
+
+### useMeiliSearch
+
+Use this composable to search into the provide index. 
+```js{}
+<script setup>
+const { search, result } = useMeiliSearch('books') // books is the index name
+
+onMounted(async () => {
+  await search('harry');
+})
+</script>
+```
+
+#### `search(query: string, options?: SearchParams)` 
+
+It will return a promise with the result of the search.
+
+#### `result`
+
+It will return the result of the search and will be updated each time you call `search` function.
+
+Result will be also set into `useState('#INDEX-search-result')` where `#INDEX` is the index name. Usefull if you want to use the result in another component. 
+
+Exemple: 
+```js{}[child-component.vue]
+<script setup>
+  const booksResult = useState('books-search-result')
+</script>
+```
+
+### useAsyncMeiliSearch
+
+### useMeiliSearchRef
+
+### useInstantSearch
+
+See [Advanced](#advanced) for more details
+
+
+
+
+## Advanced
+
+By `Advanced` we mean that you can use Meilisearch with other tools like [Algolia Instantsearch](https://github.com/algolia/instantsearch)
 
 ### Algolia InstantSearch
-
-You can use [Algolia Instantsearch](https://github.com/algolia/instantsearch) components. 
 
 **ALL** Algolia components will be loaded and available in your app.  
 
@@ -53,7 +96,7 @@ import {
   AisSearchBox,
 } from 'vue-instantsearch/vue3/es'
 
-const client = useMeilisearchClient()
+const client = useInstantSearch()
 
 </script>
 
