--- a/docus/content/3.Server-Side/1.server.md
+++ b/docus/content/3.Server-Side/1.server.md
@@ -1,5 +1,5 @@
 ---
-title: Server Side
+title: Config
 layout: default
 ---
 
@@ -64,24 +64,4 @@ export default defineEventHandler(async (event) => {
 
 `$meilisearch` is full typed so you can enjoy the full power of typescript, autocomplete and intellisense.
 
-### Full example
 
-From your API server route, you can add a document to specific index.
-
-```ts{}[server/api/myRoute]
-export default defineEventHandler(async (event) => {
-
-  
-   const addRecordRes = await $meilisearch.index('movies').addDocuments(
-     {
-       id: 999999994234,
-       title: 'Batman Unmasked: The Psychology of the Dark Knight',
-       poster: 'https://image.tmdb.org/t/p/w1280/jjHu128XLARc2k4cJrblAvZe0HE.jpg',
-       overview: 'Delve into the world of Batman and the vigilante justice tha',
-       release_date: '2008-07-15'
-     }
-   )
-
-   return { myCustomResponse: "Document is on the way...." }
-}
-```
