Doc and readme evolution

--- a/docus/content/0.index.md
+++ b/docus/content/0.index.md
@@ -142,16 +142,16 @@ Easy way to install a blazing-fast search experience with [Meilisearch](https://
   ::
   ::card
   #title
-  Full Components ready to use
-  #description
-  Support for Vue Algolia Vue 3 InstantSearch components
+Easy composables
+#description
+`useMeiliSearch` and `useAsyncMeiliSearch` for SSR usage
   ::
-  ::card
-  #title
-  Server Side
-  #description
-  Server usage to manage documents and all preferences ( index, preferences.. )
-  ::
+::card
+#title
+Server Side
+#description
+Server usage  with `$meilisearch`.  
+Manage documents and all preferences ( index, settings, addDocuments... )
 ::
-
+::
 
