--- a/docus/content/1.getting-started/1.setup.md
+++ b/docus/content/1.getting-started/1.setup.md
@@ -71,16 +71,8 @@ export default defineNuxtConfig({
     hostUrl:  'http://my-meilisearch-server.domain.com'
     searchApiKey: '<your_search_key>',
     adminApiKey: '<your_admin_key>',
-    instantSearch: true, // default true
+    instantSearch: true, // default false
     serverSideUsage:  false// default false
-    // optional
-    clientOptions: {
-      placeholderSearch: true, // default
-      paginationTotalHits: 50, // default
-      finitePagination: true, // default
-      primaryKey: undefined, // default
-      keepZeroFacets: false // default
-    }
   }
   ...
 })
