--- a/docus/content/2.Front-Side/2.Advanced.md
+++ b/docus/content/2.Front-Side/2.Advanced.md
@@ -1,17 +1,42 @@
 ---
-title: Front Side
+title: Advanced
 layout: default
 ---
 
-# Meilisearch Front Side
+# Advanced with Algolia
 
-<!-- ## Basic
+By `Advanced` we mean that you can use Meilisearch with other tools like [Algolia Instantsearch](https://github.com/algolia/instantsearch)
 
-## Advanced -->
+### Setup
+Activate `instantSearch` option in your `nuxt.config.ts` file.
 
-### Algolia InstantSearch
+```ts{}[nuxt.config.ts]
+meilisearch: {
 
-You can use [Algolia Instantsearch](https://github.com/algolia/instantsearch) components. 
+  instantSearch: true,
+  // or 
+  instantSearch: {
+        theme: 'algolia'
+      },
+  ...
+}
+```
+Theme valid options are `satellite`, `reset` or `algolia`.
+
+All `theme` info on [official page](https://www.algolia.com/doc/guides/building-search-ui/widgets/customize-an-existing-widget/vue/#style-your-widgets)
+
+
+### useInstantSearch
+
+Use this composable to get the `client` instance of Algolia InstantSearch.
+
+```js{}
+<script setup>
+const client = useInstantSearch()
+</script>
+```
+
+### Algolia Components
 
 **ALL** Algolia components will be loaded and available in your app.  
 
@@ -25,21 +50,6 @@ import {
 } from 'vue-instantsearch/vue3/es'
 ```
 
-#### Design
-Theme valid options are `satellite`, `reset` or `algolia`.
-
-All `theme` info on [official page](https://www.algolia.com/doc/guides/building-search-ui/widgets/customize-an-existing-widget/vue/#style-your-widgets)
-
-
-```ts{}[nuxt.config.ts]
-meilisearch: {
-  ...
-  instantSearch: {
-        theme: 'algolia'
-      },
-  ...
-}
-```
 
 ### Full Exemple 
 
@@ -53,15 +63,10 @@ import {
   AisSearchBox,
 } from 'vue-instantsearch/vue3/es'
 
-const client = useMeilisearchClient()
+const client = useInstantSearch()
 
 </script>
 
-```
-
-Then is your template
-
-```vue{}
 <template>
     <ais-instant-search
       :search-client="client"
