docs: use new `nuxi module add` command in installation

--- a/docus/content/0.index.md
+++ b/docus/content/0.index.md
@@ -108,7 +108,7 @@ cta:
 secondary:
   - Open on GitHub →
   - https://github.com/xlanex6/nuxt-meilisearch
-snippet: npm i -D nuxt-meilisearch
+snippet: npx nuxi@latest module add meilisearch
 features: 
   - Easy integration with MeilisearchJS lib
   - Support for Vue Algolia Vue 3 InstantSearch components (optional)
