--- a/docus/content/1.getting-started/1.setup.md
+++ b/docus/content/1.getting-started/1.setup.md
@@ -9,18 +9,9 @@ Check the [Nuxt.js documentation](https://nuxtjs.org/api/configuration-modules#t
 ## Installation
 
 Add `nuxt-meilisearch` dependency to your project:
-
-::code-group
-  ```bash [pnpm]
-  pnpm add -D nuxt-meilisearch
-  ```
-  ```bash [yarn]
-  yarn add --dev nuxt-meilisearch
-  ```
-  ```bash [npm]
-  npm i --save-dev nuxt-meilisearch
-  ```
-::
+```bash
+npx nuxi@latest module add meilisearch
+```
 
 Then ddit your `nuxt.config.js` to load the module:
 
