[Docs] add nuxi command

--- a/docus/content/1.getting-started/1.setup.md
+++ b/docus/content/1.getting-started/1.setup.md
@@ -8,21 +8,26 @@ Check the [Nuxt.js documentation](https://nuxtjs.org/api/configuration-modules#t
 
 ## Installation
 
-Add `nuxt-meilisearch` dependency to your project:
+Add `nuxt-meilisearch` using the Nuxt CLI to your project
 
-::code-group
-  ```bash [pnpm]
-  pnpm add -D nuxt-meilisearch
-  ```
-  ```bash [yarn]
-  yarn add --dev nuxt-meilisearch
-  ```
-  ```bash [npm]
-  npm i --save-dev nuxt-meilisearch
-  ```
-::
+```bash
+npx nuxi@latest module add nuxt-meilisearch
+```
 
-Then ddit your `nuxt.config.js` to load the module:
+or add `nuxt-meilisearch` using your dependency manager
+
+```bash
+# with npm
+npm install nuxt-meilisearch
+
+# with yarn
+yarn add nuxt-meilisearch
+
+# with pnpm
+pnpm add nuxt-meilisearch
+```
+
+and then to the `modules` section of `nuxt.config.ts`:
 
 ```ts{}[nuxt.config.js]
 export default defineNuxtConfig({
