refactor: update MeiliSearch client usage to utilize event-based instance for improved context handling

--- a/docus/content/3.Server-Side/1.server.md
+++ b/docus/content/3.Server-Side/1.server.md
@@ -38,7 +38,7 @@ You need to provide API KEY with **ADMIN ACCESS**
 
 ### Usage
 
-Now you can use the `$meilisearch` instance from your server side code.
+Now you can use the `$meilisearch(event)` instance from your server side code.
 
 Full exemple:
 
@@ -50,7 +50,7 @@ export default defineEventHandler(async (event) => {
   const body = await readBody(event)
 
   // Meiliseach is available with $meilisearch
-  const meilisearchResponse = $meilisearch.index('books').addDocuments(body)
+  const meilisearchResponse = $meilisearch(event).index('books').addDocuments(body)
 
   return meilisearchResponse
 
