--- a/docs/content/3.Server-Side/2.exemple.md
+++ b/docs/content/3.Server-Side/2.exemple.md
@@ -10,7 +10,7 @@ From your API server route, you can add a document to specific index.
 ```ts{}[server/api/myRoute]
 export default defineEventHandler(async (event) => {
 
-   const addRecordRes = await $meilisearch.index('movies').addDocuments(
+   const addRecordRes = await $meilisearch(event).index('movies').addDocuments(
      {
        id: 999999994234,
        title: 'Batman Unmasked: The Psychology of the Dark Knight',
@@ -21,7 +21,7 @@ export default defineEventHandler(async (event) => {
    )
 
    return { myCustomResponse: "Document is on the way....", addRecordRes }
-}
+})
 ```
 
 All options from Meiliseach JS SDK are available.
