docs: update Meilisearch access method in server documentation and add .vercel to .gitignore

--- a/docs/content/3.Server-Side/1.server.md
+++ b/docs/content/3.Server-Side/1.server.md
@@ -9,12 +9,11 @@ layout: default
 🚨🚨 **Breaking CHANGE** 🚨🚨
 ::
 
-From v0.4.0 and above, you access to Meilisearch with `$meilisearch` instead of event.
-🛑 ~~`const { serverMeilisearchClient } = event.context`~~
+From v1.4.0 and above, you access to Meilisearch with `$meilisearch(event)` 
 
-✅ `$meilisearch`
+✅ `$meilisearch(event)`
 
-The aim is to optimize performance and avoid to create a new instance for each request, no more `event.context` binding.
+Due about a change build process frm nitro, we need to pass the event to the function.
 
 ---
 
